<resources>
    <string name="app_name" translatable="false">Faustyna.pl</string>
    <string name="app_footer" translatable="false">Copyright © 2016 ZMBM</string>
    <string name="title_dojazd">Dojazd</string>
    <string name="title_aktualnosci">Aktualności</string>
    <string name="title_dzienniczek">Z \'\'Dzienniczka\'\' św. Siostry Faustyny</string>
    <string name="title_nabozenstwo">Nabożeństwo do Miłosierdzia Bożego</string>
    <string name="title_faustyna">Święta Siostra Faustyna</string>
    <string name="title_sanktuarium">Sanktuarium w Krakowie-Łagiewnikach</string>
    <string name="title_multimedia">Transmisja on-line</string>
    <string name="title_galeria">Galeria</string>
    <string name="title_koronka">Koronka za konających</string>
    <string name="title_sklep">Sklep \'\'Miseridordia\'\'</string>
    <string name="title_facebook" translatable="false">Facebook</string>
    <string name="title_sdm">Światowe Dni Młodzieży 2016</string>
    <string name="title_yt">Filmy, Rozmowy, Wywiady</string>
    <string name="title_wsparcie">Wsparcie</string>
    <string name="title_wiecej">Więcej</string>
    <string-array name="title_group_items">
        <item>Aktualności</item>
        <item>Z \'\'Dzienniczka\'\' św. Siostry Faustyny</item>
        <item>Nabożeństwo do Miłosierdzia Bożego</item>
        <item>Święta Siostra Faustyna</item>
        <item>Sanktuarium w Krakowie-Łagiewnikach</item>
        <item>Transmisja on-line</item>
        <item>Galeria</item>
        <item>Koronka za konających</item>
        <item>Sklep \'\'Miseridordia\'\'</item>
        <item>Facebook</item>
        <item>Światowe Dni Młodzieży ŚDM 2016</item>
        <item>Filmy, Rozmowy, Wywiady</item>
        <item>Wsparcie</item>
        <item>Więcej</item>
    </string-array>
    <string-array name="nabozenstwo_classes">
        <item>Istota</item>
        <item>Obraz</item>
        <item>SwietoMilosierdzia</item>
        <item>KoronkaDoMilosierdziaBozego</item>
        <item>GodzinaMilosierdzia</item>
        <item>SzerzenieCzciMilosierdzia</item>
    </string-array>
    <string-array name="faustyna_classes">
        <item>Biografia</item>
        <item>MisjaGloszeniaOredziaMilosierdzia</item>
        <item>SzkolaDuchowosci</item>
        <item>NoweZgromadzenie</item>
        <item>LitaniaDoSwSiostryFaustyny</item>
        <item>ModlitwaPrzezPrzyczyneSwFaustyny</item>
    </string-array>
    <string-array name="sanktuarium_classes">
        <item>CudownyObraz</item>
        <item>Kaplica</item>
        <item>Bazylika</item>
        <item>PorzadekNabozenstw</item>
        <item>OprowadzaniePielgrzymow</item>
        <item>Noclegi</item>
        <item>Kontakt</item>
        <item>Dojazd</item>
    </string-array>
    <string-array name="multimedia_classes">
        <item>Video</item>
        <item>OdsluchAudioGodzinyMilosierdziaIKoronki</item>
    </string-array>
    <string-array name="wsparcie_classes">
        <item>DaryNaRzeczMilosierdzia</item>
        <item>RozbudowaSanktuarium</item>
    </string-array>
    <string name="title_nabozenstwo_istota">Istota</string>
    <string name="title_nabozenstwo_obraz">Obraz</string>
    <string name="title_nabozenstwo_swieto">Święto Miłosierdzia</string>
    <string name="title_nabozenstwo_koronka">Koronka do Miłosierdzia Bożego</string>
    <string name="title_nabozenstwo_godzina">Godzina Miłosierdzia</string>
    <string name="title_nabozenstwo_szerzenie">Szerzenie czci Miłosierdzia</string>
    <string name="title_faustyna_biografia">Biografia</string>
    <string name="title_faustyna_misja">Misja głoszenia orędzia Miłosierdzia</string>
    <string name="title_faustyna_szkola">Szkoła Duchowości</string>
    <string name="title_faustyna_zgromadzenie">Nowe Zgromadzenie</string>
    <string name="title_faustyna_litania">Litania do Św. Siostry Faustyny</string>
    <string name="title_faustyna_modlitwa">Modlitwa przez przyczynę św. Faustyny</string>
    <string name="title_sanktuarium_obraz">Cudowny obraz</string>
    <string name="title_sanktuarium_bazylika">Bazylika</string>
    <string name="title_sanktuarium_kaplica">Kaplica</string>
    <string name="title_sanktuarium_porzadek">Porządek nabożeństw</string>
    <string name="title_sanktuarium_oprowadzanie">Oprowadzanie pielgrzymów</string>
    <string name="title_sanktuarium_noclegi">Noclegi</string>
    <string name="title_sanktuarium_kontakt">Kontakt</string>
    <string name="title_sanktuarium_dojazd">Dojazd</string>
    <string name="title_multimedia_koronka">Odsłuch audio Godziny Miłosierdzia i Koronki</string>
    <string name="title_multimedia_video">Video</string>
    <string name="title_wsparcie_dary_na_rzecz_milosierdzia">Dary na rzecz Miłosierdzia</string>
    <string name="title_wsparcie_rozbudowa">Rozbudowa Sanktuarium</string>
    <string name="koronka_phone_number" translatable="false">+48505060205</string>
    <string name="koronka_toast">W treści SMS wpisz imię konającego</string>
    <string name="url_faustyna">https://www.faustyna.pl/zmbm/</string>
    <string name="url_images" translatable="false">https://www.faustyna.pl/zmbm/wp-content/uploads/photo-gallery</string>
    <string name="url_facebook" translatable="false">https://www.facebook.com/groups/sanktuariumbozegomilosierdzia/</string>
    <string name="url_sdm" translatable="false">https://www.facebook.com/Faustyna2016</string>
    <string name="url_yt" translatable="false">https://www.youtube.com/user/wwwfaustynapl</string>
    <string name="url_stream" translatable="false">http://livestream.com/accounts/11477776/events/3773195/player?width=560&amp;height=315&amp;autoPlay=true&amp;mute=false</string>
    <string name="url_dzienniczek">https://www.faustyna.pl/zmbm/dzienniczek-sw-siostry-faustyny/</string>
    <string-array name="kontakt_array">
        <item>Zgromadzenie Sióstr Matki Bożej Miłosierdzia</item>
        <item>Rektorat Sanktuarium</item>
    </string-array>
    <string name="kontakt_toast">Aby się skontaktować, przytrzymaj numer telefonu lub mail</string>
    <string name="kontakt_furta_text">Furta</string>
    <string name="kontakt_furta_tel" translatable="false">+48123518800</string>
    <string name="kontakt_furta_mail_1" translatable="false">klasztor@faustyna.pl</string>
    <string name="kontakt_furta_mail_2" translatable="false">dom-krakow@faustyna.pl</string>
    <string name="kontakt_mlodziezowy_osrodek_text">Młodzieżowy Ośrodek Wychowawczy</string>
    <string name="kontakt_mlodziezowy_osrodek_tel_1" translatable="false">+48122663029</string>
    <string name="kontakt_mlodziezowy_osrodek_tel_2" translatable="false">+48122668431</string>
    <string name="kontakt_mlodziezowy_osrodek_tel_3" translatable="false">+48122668980</string>
    <string name="kontakt_mlodziezowy_osrodek_mail" translatable="false">mowkrakow@faustyna.pl</string>
    <string name="kontakt_faustinum_text">Stowarzyszenie Faustinum</string>
    <string name="kontakt_faustinum_tel" translatable="false">+48122694855</string>
    <string name="kontakt_faustinum_mail" translatable="false">faustinum@faustyna.pl</string>
    <string name="kontakt_informacja_text">Punkt informacyjny</string>
    <string name="kontakt_informacja_tel_1" translatable="false">+48122523311</string>
    <string name="kontakt_informacja_tel_2" translatable="false">+48122523333</string>
    <string name="kontakt_informacja_mail_1" translatable="false">pielgrzymki@milosierdzie.pl</string>
    <string name="kontakt_informacja_mail_2" translatable="false">adoracja@milosierdzie.pl</string>
    <string name="kontakt_informacja_mail_3" translatable="false">informacja@pastorallodge.com.pl</string>
    <string name="kontakt_dom_duszpasterski_text">Dom Duszpasterski - recepcja</string>
    <string name="kontakt_dom_duszpasterski_tel" translatable="false">+48122523300</string>
    <string name="kontakt_dom_duszpasterski_mail" translatable="false">domduszpasterski@milosierdzie.pl</string>
    <string name="kontakt_poradnia">Poradnia Miłosierdzie</string>
    <string name="kontakt_poradnia_tel" translatable="false">+48122523300</string>
    <string name="porzadek_bazylika_dni_powszednie">Dni powszednie</string>
    <string name="porzadek_bazylika_dni_powszednie_msze">- Msze Święte: 9:00, 10:30, 12:00, 15:20, 18:00</string>
    <string name="porzadek_bazylika_dni_powszednie_koronka">- 15:00 Modlitwa w Godzinie Miłosierdzia i Koronka do Miłosierdzia Bożego</string>
    <string name="porzadek_bazylika_nd">Niedziele i święta</string>
    <string name="porzadek_bazylika_nd_msze">- Msze Święte: 9:00, 10:30, 12:00, 13:30, 15:20, 18:00</string>
    <string name="porzadek_bazylika_nd_koronka">- 15:00 Modlitwa w Godzinie Miłosierdzia i Koronka do Miłosierdzia Bożego</string>
    <string name="porzadek_bazylika_codziennie">Codziennie</string>
    <string name="porzadek_bazylika_codziennie_spowiedz">- 8:30 - 18:00 spowiedź</string>
    <string name="porzadek_bazylika_codziennie_adoracja">- Wieczysta Adoracja Najświętszego Sakramentu w Kaplicy Wieczystej Adoracji</string>
    <string name="porzadek_bazylika_pt">I piątek miesiąca</string>
    <string name="porzadek_bazylika_pt_msza">- 17:00 Msza Święta (transmisja TVP 3)</string>
    <string name="porzadek_bazylika_post_pt">Wielki Post - piątki</string>
    <string name="porzadek_bazylika_post_pt_droga">- 16:00 Droga krzyżowa, a po niej Msza Święta</string>
    <string name="porzadek_bazylika_post_nd">Wielki Post - niedziele</string>
    <string name="porzadek_bazylika_post_nd_gorzkie_zale">- 15:20 Gorzkie żale z kazaniem pasyjnym, a po nich Msza Święta</string>
    <string name="porzadek_kaplica_title">Kaplica Cudownego Obrazu Jezusa Miłosiernego i grobu św. Faustyny</string>
    <string name="porzadek_kaplica_dni_powszednie">Dni powszednie</string>
    <string name="porzadek_kaplica_dni_powszednie_msze">- Msze Święte: 6:30, 17:00</string>
    <string name="porzadek_kaplica_dni_powszednie_jutrznia">- 7:15 Jutrznia</string>
    <string name="porzadek_kaplica_dni_powszednie_wystawienie">- 12:00 Wystawienie Najświętszego Sakramentu i adoracja do 17:00</string>
    <string name="porzadek_kaplica_dni_powszednie_modlitwa">- 13:15 Modlitwa liturgiczna w ciągu dnia</string>
    <string name="porzadek_kaplica_dni_powszednie_koronka">- 15:00 Modlitwa w Godzinie Miłosierdzia i Koronka do Miłosierdzia Bożego</string>
    <string name="porzadek_kaplica_dni_powszednie_nieszpory">- 18:40 Nieszpory</string>
    <string name="porzadek_kaplica_dni_powszednie_kompleta">- 19:00 Nabożeństwo, Kompleta</string>
    <string name="porzadek_kaplica_dni_powszednie_rozaniec">- 20:30 Różaniec</string>
    <string name="porzadek_kaplica_dni_powszednie_apel">- 21:00 Apel Maryjny</string>
    <string name="porzadek_kaplica_nd">Niedziele i święta</string>
    <string name="porzadek_kaplica_nd_msze">- Msze Świete: 7:00, 8:30, 19:00</string>
    <string name="porzadek_kaplica_nd_wystawienie">- 12:00 Wystawienie Najświętszego Sakramentu i adoracja do 19:00</string>
    <string name="porzadek_kaplica_nd_modlitwa">- 13:15 Modlitwa liturgiczna w ciagu dnia</string>
    <string name="porzadek_kaplica_nd_koronka">- 15:00 Modlitwa w Godzinie Miłosierdzia i Koronka do Miłosierdzia Bożego</string>
    <string name="porzadek_kaplica_nd_nabozenstwo">- 18:30 Nabożeństwo</string>
    <string name="porzadek_kaplica_nd_rozaniec">- 20:30 Różaniec</string>
    <string name="porzadek_kaplica_nd_apel">- 21:00 Apel Maryjny</string>
    <string name="porzadek_kaplica_codziennie">Codziennie</string>
    <string name="porzadek_kaplica_codziennie_spowiedz">- Spowiedź: 6:00 - 6:30; 14:30 - 15:30; 17:00 - 17:30</string>
    <string name="porzadek_kaplica_wt">Każdy wtorek</string>
    <string name="porzadek_kaplica_wt_nowenna">- 16:40 Nowenna i Msza Święta ku czci św. Siostry Faustyny</string>
    <string name="porzadek_kaplica_1_pt">I piątek miesiąca</string>
    <string name="porzadek_kaplica_1_pt_msza">- 19:00 Msza Święta</string>
</resources>