<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/porzadek_kaplica_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porzadek_kaplica_title"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_title"
            android:text="@string/porzadek_kaplica_dni_powszednie"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_msze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie"
            android:text="@string/porzadek_kaplica_dni_powszednie_msze"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_jutrznia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_msze"
            android:text="@string/porzadek_kaplica_dni_powszednie_jutrznia"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_wystawienie"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_jutrznia"
            android:text="@string/porzadek_kaplica_dni_powszednie_wystawienie"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_modlitwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_wystawienie"
            android:text="@string/porzadek_kaplica_dni_powszednie_modlitwa"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_koronka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_modlitwa"
            android:text="@string/porzadek_kaplica_dni_powszednie_koronka"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_nieszpory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_koronka"
            android:text="@string/porzadek_kaplica_dni_powszednie_nieszpory"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_kompleta"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_nieszpory"
            android:text="@string/porzadek_kaplica_dni_powszednie_kompleta"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_rozaniec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_kompleta"
            android:text="@string/porzadek_kaplica_dni_powszednie_rozaniec"/>
        <TextView
            android:id="@+id/porzadek_kaplica_dni_powszednie_apel"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_rozaniec"
            android:text="@string/porzadek_kaplica_dni_powszednie_apel"/>
        <View
            android:id="@+id/underscore_kaplica_dni_powszednie"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_dni_powszednie_apel"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_kaplica_nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_kaplica_dni_powszednie"
            android:text="@string/porzadek_kaplica_nd"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_msze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_nd"
            android:text="@string/porzadek_kaplica_nd_msze"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_wystawienie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_nd_msze"
            android:text="@string/porzadek_kaplica_nd_wystawienie"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_modlitwa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_nd_wystawienie"
            android:text="@string/porzadek_kaplica_nd_modlitwa"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_koronka"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_nd_modlitwa"
            android:text="@string/porzadek_kaplica_nd_koronka"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_nabozenstwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_nd_koronka"
            android:text="@string/porzadek_kaplica_nd_nabozenstwo"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_rozaniec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_nd_nabozenstwo"
            android:text="@string/porzadek_kaplica_nd_rozaniec"/>
        <TextView
            android:id="@+id/porzadek_kaplica_nd_apel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_nd_rozaniec"
            android:text="@string/porzadek_kaplica_nd_apel"/>
        <View
            android:id="@+id/underscore_kaplica_nd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_nd_apel"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_kaplica_codziennie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_kaplica_nd"
            android:text="@string/porzadek_kaplica_codziennie"/>
        <TextView
            android:id="@+id/porzadek_kaplica_codziennie_spowiedz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_codziennie"
            android:text="@string/porzadek_kaplica_codziennie_spowiedz"/>
        <View
            android:id="@+id/underscore_kaplica_codziennie"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_codziennie_spowiedz"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_kaplica_wt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_kaplica_codziennie"
            android:text="@string/porzadek_kaplica_wt"/>
        <TextView
            android:id="@+id/porzadek_kaplica_wt_nowenna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_wt"
            android:text="@string/porzadek_kaplica_wt_nowenna"/>
        <View
            android:id="@+id/underscore_kaplica_wt"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_wt_nowenna"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_kaplica_1_pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_kaplica_wt"
            android:text="@string/porzadek_kaplica_1_pt"/>
        <TextView
            android:id="@+id/porzadek_kaplica_1_pt_msza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_kaplica_1_pt"
            android:text="@string/porzadek_kaplica_1_pt_msza"/>
        <View
            android:id="@+id/underscore_kaplica_1_pt"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_kaplica_1_pt_msza"
            android:background="@color/divider_color"/>

    </RelativeLayout>
</ScrollView>