<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/kontakt_informacja_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontakt_informacja_text"/>
        <TextView
            android:id="@+id/kontakt_informacja_tel_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_informacja_text"
            android:text="@string/kontakt_informacja_tel_1"/>
        <TextView
            android:id="@+id/kontakt_informacja_tel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_informacja_tel_1"
            android:text="@string/kontakt_informacja_tel_2"/>
        <TextView
            android:id="@+id/kontakt_informacja_mail_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_informacja_tel_2"
            android:text="@string/kontakt_informacja_mail_1"/>
        <TextView
            android:id="@+id/kontakt_informacja_mail_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_informacja_mail_1"
            android:text="@string/kontakt_informacja_mail_2"/>
        <TextView
            android:id="@+id/kontakt_informacja_mail_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_informacja_mail_2"
            android:text="@string/kontakt_informacja_mail_3"/>
        <View
            android:id="@+id/underscore_informacja"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/kontakt_informacja_mail_3"
            android:background="@color/action_bar_color"/>

        <TextView
            android:id="@+id/kontakt_dom_duszpasterski_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_informacja"
            android:text="@string/kontakt_dom_duszpasterski_text"/>
        <TextView
            android:id="@+id/kontakt_dom_duszpasterski_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_dom_duszpasterski_text"
            android:text="@string/kontakt_dom_duszpasterski_tel"/>
        <TextView
            android:id="@+id/kontakt_dom_duszpasterski_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_dom_duszpasterski_tel"
            android:text="@string/kontakt_dom_duszpasterski_mail"/>
        <View
            android:id="@+id/underscore_dom_duszpasterski"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/kontakt_dom_duszpasterski_mail"
            android:background="@color/action_bar_color"/>

        <TextView
            android:id="@+id/kontakt_poradnia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_dom_duszpasterski"
            android:text="@string/kontakt_poradnia"/>
        <TextView
            android:id="@+id/kontakt_poradnia_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kontakt_poradnia"
            android:text="@string/kontakt_poradnia_tel"/>
        <View
            android:id="@+id/underscore_poradnia"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/kontakt_poradnia_tel"
            android:background="@color/action_bar_color"/>

    </RelativeLayout>
</ScrollView>