<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/porzadek_bazylika_dni_powszednie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porzadek_bazylika_dni_powszednie"/>
        <TextView
            android:id="@+id/porzadek_bazylika_dni_powszednie_msze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_dni_powszednie"
            android:text="@string/porzadek_bazylika_dni_powszednie_msze"/>
        <TextView
            android:id="@+id/porzadek_bazylika_dni_powszednie_koronka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_dni_powszednie_msze"
            android:text="@string/porzadek_bazylika_dni_powszednie_koronka"/>
        <View
            android:id="@+id/underscore_dni_powszednie"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_bazylika_dni_powszednie_koronka"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_bazylika_nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_dni_powszednie"
            android:text="@string/porzadek_bazylika_nd"/>
        <TextView
            android:id="@+id/porzadek_bazylika_nd_msze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_nd"
            android:text="@string/porzadek_bazylika_nd_msze"/>
        <TextView
            android:id="@+id/porzadek_bazylika_nd_koronka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_nd_msze"
            android:text="@string/porzadek_bazylika_nd_koronka"/>
        <View
            android:id="@+id/underscore_nd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_bazylika_nd_koronka"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_bazylika_codziennie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_nd"
            android:text="@string/porzadek_bazylika_codziennie"/>
        <TextView
            android:id="@+id/porzadek_bazylika_codziennie_spowiedz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_codziennie"
            android:text="@string/porzadek_bazylika_codziennie_spowiedz"/>
        <TextView
            android:id="@+id/porzadek_bazylika_codziennie_adoracja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_codziennie_spowiedz"
            android:text="@string/porzadek_bazylika_codziennie_adoracja"/>
        <View
            android:id="@+id/underscore_codziennie"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_bazylika_codziennie_adoracja"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_bazylika_pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_codziennie"
            android:text="@string/porzadek_bazylika_pt"/>
        <TextView
            android:id="@+id/porzadek_bazylika_pt_msza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_pt"
            android:text="@string/porzadek_bazylika_pt_msza"/>
        <View
            android:id="@+id/underscore_pt"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_bazylika_pt_msza"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_bazylika_post_pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_pt"
            android:text="@string/porzadek_bazylika_post_pt"/>
        <TextView
            android:id="@+id/porzadek_bazylika_post_pt_droga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_post_pt"
            android:text="@string/porzadek_bazylika_post_pt_droga"/>
        <View
            android:id="@+id/underscore_post_pt"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_bazylika_post_pt_droga"
            android:background="@color/divider_color"/>

        <TextView
            android:id="@+id/porzadek_bazylika_post_nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/underscore_post_pt"
            android:text="@string/porzadek_bazylika_post_nd"/>
        <TextView
            android:id="@+id/porzadek_bazylika_post_nd_gorzkie_zale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/porzadek_bazylika_post_nd"
            android:text="@string/porzadek_bazylika_post_nd_gorzkie_zale"/>
        <View
            android:id="@+id/underscore_post_nd"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/porzadek_bazylika_post_nd_gorzkie_zale"
            android:background="@color/divider_color"/>

    </RelativeLayout>
</ScrollView>